k8s_yaml/application/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-metadata-name-notekeep
  namespace: common-metadata-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      service: deployment-notekeep-template-metadata-label-service # select the temple from below
  template:
    metadata:
      labels:
        service: deployment-notekeep-template-metadata-label-service
    spec:
      containers:
      - image: ghcr.io/fethullahcucu/notekeep:main # change later
        imagePullPolicy: Always
        name: api  # change later
