k8s_yaml/application/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: metadata-notekeep-loadbalancer
  namespace: common-metadata-namespace
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    service: deployment-notekeep-template-metadata-label-service # the word service as a label key, not as a Kubernetes Service object
  type: LoadBalancer
